data/derived/comb/progs/unify/prog8153.ml.out
Characters 48-61:
  |_ -> clone x (n-1) :: x;;
        ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
